kind/manifests/workload-2/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    opa-istio-injection: "true"
  labels:
    app: podinfo2
  name: podinfo2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo2
  template:
    metadata:
      annotations:
        opa-istio-injection: "true"
        inject.istio.io/templates: "sidecar,spire"
      labels:
        app: podinfo2
#        spire.spiffe.io/spiffeid: podinfo2
    spec:
      serviceAccountName: podinfo2
      containers:
      - image: stefanprodan/podinfo
        name: podinfo
        ports:
        - containerPort: 9898
        volumeMounts:
        - name: spire-agent-socket
          mountPath: /spire-agent-socket
          readOnly: true
      volumes:
      - name: spire-agent-socket
        csi:
          driver: "csi.spiffe.io"
          readOnly: true
