kind/manifests/workload-2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    opa-istio-injection: "true"
  labels:
    app: workload-2
  name: workload-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workload-2
  template:
    metadata:
      annotations:
        opa-istio-injection: "true"
        inject.istio.io/templates: "sidecar,spire"
      labels:
        app: workload-2
    spec:
      serviceAccountName: workload-2
      containers:
      - image: ${JWT_FETCH_IMAGE_TAG}
        name: spiffe-jwt
        volumeMounts:
        - name: svid
          mountPath: /svid
          readOnly: false
        - name: spire-agent-socket
          mountPath: /spire-agent-socket
          readOnly: true
      - image: stefanprodan/podinfo
        name: podinfo
        ports:
        - containerPort: 9898
        volumeMounts:
        - name: spire-agent-socket
          mountPath: /spire-agent-socket
          readOnly: true
      volumes:
      - name: spire-agent-socket
        csi:
          driver: "csi.spiffe.io"
          readOnly: true
      - name: svid
        emptyDir: {}
