kind/manifests/workload-2/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo2
  labels:
    app: podinfo2
    service: podinfo2
spec:
  ports:
  - port: 9898
    name: http
  selector:
    app: podinfo2
