kind/manifests/workload-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workload-2
  labels:
    app: workload-2
    service: workload-2
spec:
  ports:
  - port: 9898
    name: http
  selector:
    app: workload-2
