kind/manifests/workload-2/virtual-service-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo2
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /version
    route:
    - destination:
        host: podinfo2
        port:
          number: 9898
